--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=yes|no" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
+  <title>Divya Varun Portfolio</title>
+</head>
+<body>
+    <header>
+        <div class ="menu-btn">
+            <span class = "menu-btn__burger"></span>
+        </div>
+
+        <nav class = "nav">
+            <ul class = "menu-nav">
+                <li class = "menu-nav__item active">
+                    <a href = "index.html" class = "menu-nav__link">Home</a>
+                </li>
+                <li class = "menu-nav__item">
+                    <a href = "about.html" class = "menu-nav__link">About Me</a>
+                </li>
+                <li class = "menu-nav__item">
+                    <a href = "projects.html" class = "menu-nav__link">My Projects</a>
+                </li>
+                <li class = "menu-nav__item">
+                    <a href = "contacts.html" class = "menu-nav__link">Contact Me</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class ="home">
+
+            <!--Animation-->
+          <!--<div class='ripple-background'>
+                <div class='circle xxlarge shade1'></div>
+                <div class='circle xlarge shade2'></div>
+                <div class='circle large shade3'></div>
+                <div class='circle mediun shade4'></div>
+                <div class='circle small shade5'></div>
+            </div>  -->
+            <div class = "home__photo"><img src="../dist/img/divya-photo-blk.jpg"></div>
+            <h1 class = "home__name">
+                Divya<span class ="home__name--last"> Varun</span>
+            </h1>
+            <h2>
+                Web Developer, Designer & Programmer
+            </h2>
+            <div class="social-icons">
+                <a href="https://twitter.com/home">
+                  <i class="fab fa-twitter fa-2x"></i>
+                </a>
+                <a href="https://www.facebook.com/Divya.Varunraj">
+                  <i class="fab fa-facebook fa-2x"></i>
+                </a>
+                <a href="https://www.instagram.com/divyavarunraj/">
+                  <i class="fab fa-instagram fa-2x"></i>
+                </a>
+                <a href="https://github.com/divyavarun85">
+                  <i class="fab fa-github fa-2x"></i>
+                </a>
+              </div>
+        
+
+            <footer>&copy: Copyright2020</footer>
+        </section>
+    </main>
+ <script src="https://kit.fontawesome.com/6d2ea823d0.js"></script>
+    <script type = "text/javascript" src ="js/main.js"></script>
+</body>
+</html>
