--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class='circle mediun shade4'></div>
                 <div class='circle small shade5'></div>
             </div>  -->
-            <div class = "home__photo"><img src="../dist/img/divya-photo-blk.jpg"></div>
+            <div class = "home__photo"><img src="img/divya-photo-blk.jpg"></div>
             <h1 class = "home__name">
                 Divya<span class ="home__name--last"> Varun</span>
             </h1>
